--- a/README.rdoc
+++ b/README.rdoc
@@ -26,3 +26,31 @@ Things you may want to cover:
 
 Please feel free to use a different markup language if you do not plan to run
 <tt>rake doc:app</tt>.
+
+<%= f.hidden_field :user_id, value: current_user.id %>
+<%= f.hidden_field :isbn, value: book.isbn %>
+<%= f.hidden_field :title, value: book.title %>
+<%= f.hidden_field :author, value: book.authors %>
+<%= f.hidden_field :category, value: book.categories %>
+<%= f.hidden_field :pages, value: book.page_count.to_i %>
+<%= f.hidden_field :cover_image, value: book.image_link %>
+
+<div id="bookshelf">
+	<%= form_for :read_book, url: read_books_path do |f| %>
+	   <% @books.each do |book| %>
+			<div class='book'>
+      	<a href=""><img src="<%= book.image_link %>"></a>
+      	<%= f.hidden_field :user_id, value: current_user.id %>
+		    <%= f.hidden_field :isbn, value: book.isbn %>
+        <%= f.hidden_field :title, value: book.title %>
+        <%= f.hidden_field :author, value: book.authors %>
+        <%= f.hidden_field :category, value: book.categories %>
+        <%= f.hidden_field :pages, value: book.page_count.to_i %>
+        <%= f.hidden_field :cover_image, value: book.image_link %>
+        <div class="action">
+	  	    <%= f.submit 'Add to read' %>
+        </div>
+			</div>
+	   <% end %>
+	<% end %>
+</div>
