--- a/README.rdoc
+++ b/README.rdoc
@@ -1,40 +1,1 @@
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-# development:
-#   access_key_id: AKIAJAD7ZWPVRER37QRQ
-#   secret_access_key: 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
-
-Pages:
-Home (logged out)
-Home (logged in)
-Books
-People
-Clubs
-Profile (logged out)
-Profile (logged in)
-Profile (logged in - other user's)
-Book
-Club
-
- <a href="<%= book_path(book) %>" class="book">
-        <img src="<%= book.cover_small %>">
-      </a>
+Leavs
